--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "covid-tracker",
+  "react": "^15.3.1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,9 +9,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.2",
     "react-number-format": "^4.8.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
