--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
-    "leaflet": "^1.7.1",
+    "leaflet": "^1.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
-    "react-leaflet": "^3.2.2",
+    "react-leaflet": "^3.2.0",
     "react-number-format": "^4.8.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
@@ -30,16 +30,12 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
+  "devDependencies": {
+    "@types/leaflet": "^1.7.6"
   }
 }
